<resources>
    <string name="app_name">Winepedia</string>
    <string name="detail_name">Detail Wine</string>
    <string name="about_name">Tentang Saya</string>
    <string name="wines_name">Nama Wine</string>
    <string name="description">Deskripsi</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="about">About</string>
    <string name="name">Fahmi Hanafi</string>
    <string name="email">a288b4ky1347@bangkit.academy</string>
    <string name="score">Score</string>
    <string name="num">xx</string>
    <string name="num_case">xxxxx</string>
    <string name="num_price">Rp.xxxxxxx</string>
    <string name="price">Price</string>
    <string name="imported">Case Made</string>
    <string-array name="data_made">
        <item>3,504</item>
        <item>4,000</item>
        <item>20,000</item>
        <item>2,075</item>
        <item>833</item>
        <item>3,750</item>
        <item>5,000</item>
        <item>12,404</item>
        <item>10,870</item>
        <item>10,000</item>
    </string-array>
    <string-array name="data_price">
        <item>Rp.1370632</item>
        <item>Rp.989348</item>
        <item>Rp.2085242</item>
        <item>Rp.1065452</item>
        <item>Rp.1111114</item>
        <item>Rp.2663631</item>
        <item>Rp.761037</item>
        <item>Rp.2511423</item>
        <item>Rp.608830</item>
        <item>Rp.350077</item>
    </string-array>
    <string-array name="data_score">
        <item>95</item>
        <item>94</item>
        <item>96</item>
        <item>95</item>
        <item>95</item>
        <item>96</item>
        <item>95</item>
        <item>97</item>
        <item>94</item>
        <item>95</item>
    </string-array>
    <string-array name="data_name">
        <item>Argiano Brunello di Montalcino 2018</item>
        <item>Occidental Pinot Noir West Sonoma Coast Freestone-Occidental 2021 </item>
        <item>Château Lynch Bages Pauillac 2020</item>
        <item>RAEN Pinot Noir Sonoma Coast Royal St. Robert Cuvée 2021</item>
        <item>Mastroberardino Taurasi Radici Riserva 2016</item>
        <item>Dunn Cabernet Sauvignon Howell Mountain 2019</item>
        <item>Antinori Chianti Classico Marchese Antinori Riserva 2019</item>
        <item>Château Pichon Baron Pauillac 2020</item>
        <item>Résonance Pinot Noir Willamette Valley 2021</item>
        <item>Greywacke Sauvignon Blanc Marlborough 2022</item>
    </string-array>
</resources>