<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/detail_img_photo"
            android:layout_width="225dp"
            android:layout_height="248dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/detail_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/wines_name"
            android:paddingLeft="5dp"
            android:layout_marginTop="20dp" />

        <!-- Horizontal LinearLayout for num and score -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/score"
                android:textSize="12sp"
                android:paddingStart="75dp"
                android:paddingEnd="15dp" /> <!-- Space between num and score -->

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/price"
                android:textSize="12sp"
                android:paddingStart="45dp"
                android:paddingEnd="30dp"/>

            <TextView
                android:id="@+id/case_made"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/imported"
                android:paddingStart="40dp"
                android:textSize="12sp"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/detail_num_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/num"
                android:textSize="16sp"
                android:paddingStart="83dp"
                android:paddingEnd="29dp" /> <!-- Space between num and score -->

            <TextView
                android:id="@+id/detail_num_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/num_price"
                android:textSize="16sp"
                android:paddingStart="13dp"
                android:paddingEnd="20dp"/>

            <TextView
                android:id="@+id/detail_num_case"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/num_case"
                android:textSize="16sp"
                android:paddingStart="30dp"
                android:paddingEnd="20dp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:paddingLeft="5dp"
            android:text="@string/description"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/detail_tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:text="@string/description"
            android:textSize="14sp" />
    </LinearLayout>
</ScrollView>
